[package]
name = "haiku_crossing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
bs58 = "0.5.0"
generic-array = "0.14"
k256 = "0.13.3"
rand = "0.8.5"
rand_core = "0.6.4"
serde_json = "1.0.114"
